--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,70 @@
   <version>0.0.1-beta</version>
   <name>India PP Records</name>
   
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>SheetsQuickstart</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+  
+  
+  
   <dependencies>
+	  
+	<!-- Google OAuth Client Library -->
   	<dependency>
   		<groupId>com.google.api-client</groupId>
   		<artifactId>google-api-client</artifactId>
-  		<version>1.23.0</version>
+  		<version>2.0.0</version>
   	</dependency>
   	
+  	<!-- Google OAuth Client Library -->
   	<dependency>
   		<groupId>com.google.oauth-client</groupId>
   		<artifactId>google-oauth-client-jetty</artifactId>
-  		<version>1.23.0</version>
+  		<version>1.34.1</version>
   	</dependency>
+
+	<!-- Google Auth Library -->
+    <dependency>
+        <groupId>com.google.auth</groupId>
+        <artifactId>google-auth-library-oauth2-http</artifactId>
+        <version>1.20.0</version> <!-- Use the latest version available -->
+    </dependency>
   	
+  	<!-- Google Sheets API Client Library -->
   	<dependency>
   		<groupId>com.google.apis</groupId>
   		<artifactId>google-api-services-sheets</artifactId>
-  		<version>v4-rev516-1.23.0</version>
+  		<version>v4-rev20220927-2.0.0</version>
   	</dependency>
+  	
+  	<!-- Google HTTP Client Library -->
+    <dependency>
+        <groupId>com.google.http-client</groupId>
+        <artifactId>google-http-client</artifactId>
+        <version>1.38.0</version>
+    </dependency>
   	
   	<dependency>
 		<groupId>com.googlecode.json-simple</groupId>  
@@ -37,4 +83,13 @@
 	</dependency>
 	
   </dependencies>
+  
+  
+  
+  <repositories>
+      <repository>
+          <id>central</id>
+          <url>https://repo.maven.apache.org/maven2</url>
+      </repository>
+  </repositories>
 </project>
