--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 		<version>20231013</version>
 	</dependency>
 	
+	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongodb-driver-sync</artifactId>
+		<version>4.7.1</version>
+	</dependency>
+
   </dependencies>
   
   
