--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 		<version>4.7.1</version>
 	</dependency>
 
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback-classic</artifactId>
+    	<version>1.2.13</version>
+    </dependency>
+
   </dependencies>
   
   
